--- a/README
+++ b/README
@@ -1,2 +1,2 @@
 This is a Python project for machine learning.
-Sveral models will be tested, like Perceptron, ADALINE or KNN.
+Several models will be tested, like Perceptron, ADALINE or KNN.
