Add main code and new version of README

--- a/README
+++ b/README
@@ -1,2 +1,3 @@
 This is a Python project for machine learning.
 Several models will be tested, like Perceptron, ADALINE or KNN.
+The first model will be in-house Perceptron code.
